@@ -13,3 +13,4 @@ handlers:
 
 - url: /.*
   script: main.py
+  login: required
